--- a/scss/main.css
+++ b/scss/main.css
@@ -37,7 +37,7 @@
 }
 @media screen and (min-width: 1200px) {
   #header #header-lower {
-    padding: 20px 80px !important; /*variables.$site-lr-padding * 0.3 variables.$site-lr-padding !important;*/
+    padding: 30px 100px !important;
   }
 }
 #header #header-lower #img-container {
@@ -45,7 +45,7 @@
   flex-grow: 1;
 }
 #header #header-lower #img-container img {
-  height: 20px;
+  height: 50px;
 }
 @media screen and (min-width: 800px) {
   #header #header-lower #img-container img {
@@ -95,7 +95,7 @@
 
 #footer {
   background-color: #8855bd;
-  color: #f2f2f2;
+  color: #F2F2F2;
 }
 #footer .footer-row {
   display: flex;
@@ -105,9 +105,28 @@
   width: 60px;
   height: 60px;
 }
+@media screen and (min-width: 500px) {
+  #footer .footer-row img[data-image-form=square] {
+    width: 80px;
+    height: 80px;
+  }
+}
+#footer .footer-row img[data-image-form=grow-width] {
+  height: 30px;
+}
+@media screen and (min-width: 500px) {
+  #footer .footer-row img[data-image-form=grow-width] {
+    height: 50px;
+  }
+}
 #footer .footer-row h1 {
   font-size: 24px;
   margin: 0 0 0 16px;
+}
+@media screen and (min-width: 500px) {
+  #footer .footer-row h1 {
+    font-size: 32px;
+  }
 }
 #footer .footer-row h2 {
   font-weight: normal;
@@ -120,7 +139,7 @@
   gap: 5%;
 }
 @media screen and (min-width: 1000px) {
-  #footer .footer-row #footer .footer-row:nth-of-type(2) {
+  #footer .footer-row:nth-of-type(2) {
     justify-content: space-between;
   }
 }
@@ -135,83 +154,20 @@
 #footer .footer-col ul {
   margin: 0;
 }
-#footer .footer-col li a {
+#footer .footer-col ul li a {
   color: inherit;
   text-underline-offset: 2px;
   text-decoration-thickness: 1px;
   margin: 0 0 4px 0;
 }
-#footer .footer-col li a:hover {
-  color: #fff;
+#footer .footer-col ul li a:hover {
+  color: white;
   text-decoration: underline;
 }
 #footer hr {
   margin: clamp(16px, 1vh, 48px) 0;
   border: none;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3137254902);
-}
-@media screen and (min-width: 500px) {
-  #footer #footer .footer-row img[data-image-form=square] {
-    width: 80px;
-    height: 80px;
-  }
-}
-#footer img[data-image-form=grow-width] {
-  height: 30px;
-}
-@media screen and (min-width: 500px) {
-  #footer #footer .footer-row img[data-image-form=grow-width] {
-    height: 50px;
-  }
-}
-@media screen and (min-width: 500px) {
-  #footer #footer .footer-row h1 {
-    font-size: 32px;
-  }
-}
-@media screen and (min-width: 800px) {
-  #footer {
-    padding: 25px 100px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  #footer {
-    padding: 25px 200px;
-  }
-}
-#footer nav {
-  display: none;
-  font-weight: 400;
-}
-#footer nav a {
-  margin-right: 1em;
-}
-#footer nav a img {
-  width: clamp(30px, 1vw, 100px);
-}
-#footer nav a:last-of-type {
-  margin-right: 0;
-}
-#footer nav:last-of-type {
-  display: inline-flex;
-  align-items: center;
-}
-@media screen and (min-width: 800px) {
-  #footer nav {
-    display: inline-flex;
-  }
-  #footer nav:last-of-type {
-    display: none;
-  }
-}
-#footer h1 {
-  color: #BFBFBF;
-  font-weight: 100;
-  font-size: 16px;
-}
-#footer h1 span {
-  color: #F2F2F2;
-  font-weight: 600;
 }
 
 #hamburger-container {
@@ -424,6 +380,7 @@ a[data-icon=logo-instagram] {
   background-image: url("../media/logos/instagram.svg");
 }
 a[data-icon=logo-github] {
+  background-size: 30px 30px;
   background-image: url("../media/logos/github.svg");
 }
 
@@ -504,7 +461,7 @@ h1 span[data-style=colored] {
 }
 
 .padded {
-  padding: 60 px 20px; /*variables.$site-lr-padding300 * 3 variables.$site-lr-padding300 * 2;*/
+  padding: 60px 20px;
 }
 @media screen and (min-width: 500px) {
   .padded {
@@ -529,63 +486,4 @@ h1 span[data-style=colored] {
 
 .override-padding-r {
   padding-right: 0;
-}
-
-/* FAQ */
-.accordion {
-  width: 42rem;
-  background: transparent;
-}
-
-.accordion__btn {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  padding: 1.2rem 1.4rem;
-  background: white;
-  border: none;
-  outline: none;
-  color: var(--color-text);
-  font-size: 1.2rem;
-  text-align: left;
-  cursor: pointer;
-  transition: 0.1s;
-}
-.accordion__btn span {
-  color: #fff;
-}
-
-.accordion__item--active .accordion__btn {
-  background: hsl(248, 53%, 97%);
-}
-
-.accordion__icon {
-  border-radius: 50%;
-  transform: rotate(0deg);
-  transition: 0.3s ease-in-out;
-  opacity: 0.9;
-}
-
-.accordion__item--active .accordion__icon {
-  transform: rotate(135deg);
-}
-
-.accordion__content {
-  font-weight: 300;
-  max-height: 0;
-  opacity: 0;
-  overflow: hidden;
-  color: var(--color-text-muted);
-  transform: translateX(16px);
-  transition: max-height 0.5s ease, opacity 0.5s, transform 0.5s;
-}
-.accordion__content p {
-  padding: 1rem 1.8rem;
-}
-
-.accordion__item--active .accordion__content {
-  opacity: 1;
-  transform: translateX(0px);
-  max-height: 100vh;
 }/*# sourceMappingURL=main.css.map */
